feat/add: case of study component, external links and more project images

--- a/frontend/src/DATA/dataProjects.json
+++ b/frontend/src/DATA/dataProjects.json
@@ -118,8 +118,8 @@
         "Lazy Loading",
         "Supabase"
       ],
-      "youTubeVideo": "",
-      "deploy": "",
+      "youTubeVideo": "www.yuotube.com",
+      "deploy": "dasdasads",
       "gitCodeSource": "https://github.com/StefanHritcu/next-fit-track",
       "caseOfStudy": "Enhancing fitness tracking with a user-centric Next.js app.",
       "caseOfStudyInformation": [
