--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.4",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.9",
+    "prova123daje": "^1.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
